fixed header alignment

--- a/skin/frontend/saltcity/saltcity/css/styles.css
+++ b/skin/frontend/saltcity/saltcity/css/styles.css
@@ -237,7 +237,7 @@ body {
 .header .quick-access .phone {
   color: #2c2f33 !important;
   text-transform: uppercase;
-  padding: 7px 34px 0 0;
+  padding: 3px 34px 0 0;
   height: 22px;
   line-height: 25px;
   font-weight: normal;
